--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/user-event": "^12.1.10",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
+    "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
